src/input.h
@@ -302,6 +302,7 @@ public Q_SLOTS:
 
 private Q_SLOTS:
     void handleInputConfigChanged(const KConfigGroup &group);
+    void updateScreens();
 
 private:
     void setupInputBackends();
